# ABC_CUDA

./: .clangd  .gitignore  CMakeLists.txt  README.md  notes.txt
src/: abc_cpu.cpp  abc_cpu.cu  abc_cpu.cuh  abc_cpu.h  abc_cpu.hpp  abc_gpu.cu  abc_gpu.cuh  abc_main.cuh  abc_test.cuh  graphs.cpp  main.cu  rank_array.cuh  rank_array.h  test  timer.cuh  utils.cuh
src/problems/: problems.cuh  problems.h  problems.hpp  problems_bowl_shaped.cpp  problems_bowl_shaped.cu  problems_bowl_shaped.cuh  problems_bowl_shaped.hpp  problems_gpu.cuh  problems_many_local_minima.cpp  problems_many_local_minima.cu  problems_many_local_minima.cuh  problems_many_local_minima.hpp  problems_other.cpp  problems_other.cu  problems_other.cuh  problems_other.hpp  problems_plate_shaped.cpp  problems_plate_shaped.cu  problems_plate_shaped.cuh  problems_plate_shaped.hpp  problems_steep_ridges.cpp  problems_steep_ridges.cu  problems_steep_ridges.cuh  problems_steep_ridges.hpp  problems_valley_shaped.cpp  problems_valley_shaped.cu  problems_valley_shaped.cuh  problems_valley_shaped.hpp
src/problems/cpu/: bowl_shaped.cpp  many_local_minima.cpp  other.cpp  plate_shaped.cpp  problems_bowl_shaped.cpp  problems_bowl_shaped.h  problems_many_local_minima.cpp  problems_many_local_minima.h  problems_other.cpp  problems_other.h  problems_plate_shaped.cpp  problems_plate_shaped.h  problems_steep_ridges.cpp  problems_steep_ridges.h  problems_valley_shaped.cpp  problems_valley_shaped.h  steep_ridges.cpp  valley_shaped.cpp  valley_shaped.h
src/problems/gpu/: bowl_shaped.cu  bowl_shaped.cuh  many_local_minima.cu  many_local_minima.cuh  other.cu  other.cuh  plate_shaped.cu  plate_shaped.cuh  problems_bowl_shaped.cu  problems_bowl_shaped.cuh  problems_many_local_minima.cu  problems_many_local_minima.cuh  problems_other.cu  problems_other.cuh  problems_plate_shaped.cu  problems_plate_shaped.cuh  problems_steep_ridges.cu  problems_steep_ridges.cuh  problems_valley_shaped.cu  problems_valley_shaped.cuh  steep_ridges.cu  steep_ridges.cuh  valley_shaped.cu  valley_shaped.cuh
src/utils/: array.cpp  array.hpp  mergesort.cpp  quicksort.cpp  random.cpp  random.hpp  sort.cpp  sort.hpp  utils.hpp
